# kdc-cli

./: .all-contributorsrc  .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml  update-readme-version.yml
scripts/: package.sh
src/: lib.rs  main.rs
src/app/: dashboard.rs  events.rs  mod.rs  navigation.rs  router.rs  startup.rs  state.rs
src/commands/: palette.rs
src/compose/: down.rs  logs.rs  mod.rs  restart.rs  services.rs  up.rs
src/config/: paths.rs  settings.rs
src/deploy/: environments.rs  history.rs  mod.rs  pipeline.rs  release.rs  rollback.rs
src/docker/: build.rs  containers.rs  images.rs  logs.rs  mod.rs  networks.rs  run.rs  volumes.rs
src/doctor/: docker_check.rs  environment_check.rs  kubernetes_check.rs  mod.rs  registry_check.rs
src/domain/: menu.rs  mod.rs  project.rs  screen.rs
src/kubernetes/: command.rs  configmaps.rs  deployments.rs  events.rs  ingress.rs  mod.rs  namespaces.rs  pods.rs  secrets.rs  services.rs
src/monitoring/: events.rs  health.rs  logs.rs  metrics.rs  mod.rs
src/plugins/: loader.rs  manager.rs  mod.rs  registry.rs  traits.rs
src/project/: analyzer.rs  capabilities.rs  detector.rs  environment.rs  mod.rs  runtime.rs  scanner.rs  stack_detector.rs
src/services/: executor.rs
src/storage/: cache.rs  history.rs  mod.rs  preferences.rs  sqlite.rs
src/templates/: docker.rs  mod.rs  (+3 more)
tests/: compose_execution.rs  deployment_pipeline.rs  docker_execution.rs  doctor_enhanced.rs  project_detection.rs
(+14 files in other folders)
