[package]
name = "kdc"
version = "0.1.0"
edition = "2021"
description = "Kubernetes Docker Commander, a project-centric DevOps TUI"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
miette = { version = "7", features = ["fancy"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"

